--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wgpu_canvas"
-version = "2.1.3"
+version = "3.0.0"
 edition = "2021"
 description = "wgpu renderer api for a 2d canvas, wgpu_lyon for shapes, glyhpon for text, wgpu_image for images"
 license = "BSD-3-Clause"
@@ -10,8 +10,10 @@ repository = "https://github.com/CalebCouch/wgpu_canvas.git"
 [dependencies]
 lyon_tessellation = "1.0.15"
 lyon_path = "1.0.6"
-wgpu = "22.1.0"
-wgpu_cyat = "1.1.1"
-wgpu_image = "2.0.1"
-glyphat = "1.0.1"
+wgpu = "24.0.1"
+wgpu_cyat = "1.1.3"
+#wgpu_cyat = {path="../wgpu_cyat"}
+wgpu_image = "2.0.2"
+#wgpu_image = {path="../wgpu_image"}
+glyphat = "2.0.0"
 hex = "0.4.3"
