--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ wgpu_dyn_buffer = "2.0.0"
 bytemuck = "1.21.0"
 glyphon = "0.8.0"
 image_crate = {package="image", version="0.25.5"}
+fast_image_resize = {version="5.1.2", features=["image"]}
