--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ ramp-glyphon = "0.9.1"
 image = {package="image", version="0.25.5"}
 fast_image_resize = {version="5.1.2", features=["image"]}
 unicode-segmentation = "1.12.0"
+rand = "0.9.1"
+texture_packer = "0.30.0"
+fontdue = "0.9.3"
