--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wgpu_canvas"
-version = "4.1.2"
+version = "5.0.0"
 edition = "2021"
 license = "BSD-3-Clause"
 repository = "https://github.com/ramp-stack/wgpu_canvas.git"
@@ -11,10 +11,12 @@ keywords = ["wgpu", "canvas", "2d", "graphics", "rust"]
 categories = ["graphics", "rendering", "gui", "game-development"]
 
 [dependencies]
-wgpu = "25.0.0"
-hex = "0.4.3"
-wgpu_dyn_buffer = "3.0.0"
-bytemuck = "1.21.0"
+wgpu = {version="25.0.0", optional=true}
+bytemuck = {version="1.21.0", optional=true}
 image = {package="image", version="0.25.5"}
-fast_image_resize = {version="5.1.2", features=["image"]}
 fontdue = "0.9.3"
+
+[features]
+default = ["canvas", "renderer"]
+canvas = ["renderer"]
+renderer = ["dep:wgpu", "dep:bytemuck"]
