--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ wgpu = {version="25.0.0", optional=true}
 bytemuck = {version="1.21.0", optional=true}
 image = {package="image", version="0.25.5"}
 fontdue = "0.9.3"
+lazy_static = "1.5.0"
 
 [features]
 default = ["canvas", "renderer"]
